--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
+    "css-loader": "^0.28.9",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "style-loader": "^0.19.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.0"
   }
